--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div>
 <div class="col-lg-10 apbc-desktop-menu">
 <div class="apbc-nav-menu">
-<div class="english-translator"><a href="https://sanjanachauhan1.github.io/drishti/">English</a></div>
+<div class="english-translator"><a href="https://drishti-1.github.io/drishti-english/">English</a></div>
 <ul>
 <li><a class="nav-link" href="#home">होम</a></li>
 <li><a class="nav-link" href="#highlights">हाइलाइट</a></li>
@@ -50,7 +50,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div>
 </div>
 <div class="col-lg-1 col-md-6 col-5 text-right">
-<div class="english-translator english-translator-mob"><a href="https://sanjanachauhan1.github.io/drishti/">English</a></div>
+<div class="english-translator english-translator-mob"><a href="https://drishti-1.github.io/drishti-english/">English</a></div>
 <div class="apbc-mobile-menu-open">
 <a href="#"><i class="fas fa-bars"></i></a>
 </div>
