--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <li><a class="nav-link" href="#highlights">हाइलाइट</a></li>
 <li><a class="nav-link" href="#mission">हमारा विशेष कार्य</a></li>
 <li><a class="nav-link" href="#volunteer">स्वयंसेवी डॉक्टर</a></li>
-<li><a class="nav-link" href="#fight">विरुद्ध लड़ाई</a></li>
+<li><a class="nav-link" href="#fight">नेत्र रोगों से लड़ें</a></li>
 </ul>
 </div>
 </div>
@@ -70,7 +70,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <li><a class="nav-link" href="#highlights">हाइलाइट</a></li>
 <li><a class="nav-link" href="#mission">हमारा विशेष कार्य</a></li>
 <li><a class="nav-link" href="#volunteer">स्वयंसेवी डॉक्टर</a></li>
-<li><a class="nav-link" href="#fight">विरुद्ध लड़ाई</a></li>
+<li><a class="nav-link" href="#fight">नेत्र रोगों से लड़ें</a></li>
 </ul>
 </nav>
 </div>
@@ -212,7 +212,103 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
+<section class="volunteer-section" id="volunteer">
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<div class="apbc-title-area text-center wow fadeInUp">
+<div class="apbc-headline">
+<h3>हमारे स्वयंसेवक डॉक्टर</h3>
+</div></div>
+</div></div>
 
+
+<div class="row">
+
+<div class="col-md-6">
+<p>समर्पित स्वयंसेवी डॉक्टरों की हमारी टीम दृष्टि की रीढ़ है। वे हाशिए पर पड़े समुदायों के बच्चों को व्यापक नेत्र देखभाल सेवाएँ प्रदान करने के लिए उदारतापूर्वक अपनी विशेषज्ञता और समय प्रदान करते हैं।</p>
+
+<p>यदि आप एक योग्य नेत्र देखभाल पेशेवर हैं और बदलाव लाने के लिए उत्सुक हैं, तो हम आपको हमारे नेक काम में शामिल होने के लिए आमंत्रित करते हैं। साथ मिलकर, हम अनगिनत बच्चों का भविष्य उज्ज्वल कर सकते हैं।</p>
+<a href="#enquire2" data-toggle="modal" class="enquire_now2">स्वयंसेवक के लिए यहां क्लिक करें</a> 
+</div>
+
+<div class="col-md-6">
+<img src="img/volunteer-doctors.jpg" class="img-fluid"/>
+</div>
+
+</div></div>
+</section>
+
+
+
+
+<section class="volunteer-prefects-section" id="">
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<div class="apbc-title-area text-center wow fadeInUp">
+<div class="apbc-headline">
+<h3>हमारे स्वयंसेवक प्रीफेक्ट्स से मिलें</h3>
+<p class="mt-3">हमारे युवा, उत्साही और समर्पित स्वयंसेवक प्रीफेक्ट दृष्टि में नई ऊर्जा और जुनून लेकर आते हैं। वे बदलाव लाने के लिए प्रतिबद्ध हैं और हर कदम पर आपकी मदद करने के लिए तैयार हैं।</p>
+</div></div>
+</div></div>
+
+
+<div class="row">
+<div class="volunteer-prefects-block">
+<div class="owl-carousel owl-prefects owl-theme">
+
+<div class="item">
+<div class="volunteer_gallery">
+<img src="img/aarav-mehta.jpg" class="img-fluid"/>
+<div class="volunteer_gallery_content">
+<h3>आरव मेहता</h3>
+</div>
+</div></div>
+
+<div class="item">
+<div class="volunteer_gallery">
+<img src="img/ananya-patel.jpg" class="img-fluid"/>
+<div class="volunteer_gallery_content">
+<h3>अनन्या पटेल</h3>
+</div>
+</div></div>
+
+<div class="item">
+<div class="volunteer_gallery">
+<img src="img/rohan-gupta.jpg" class="img-fluid"/>
+<div class="volunteer_gallery_content">
+<h3>रोहन गुप्ता</h3>
+</div>
+</div></div>
+
+<div class="item">
+<div class="volunteer_gallery">
+<img src="img/diya-sharma.jpg" class="img-fluid"/>
+<div class="volunteer_gallery_content">
+<h3>दीया शर्मा</h3>
+</div>
+</div></div>
+
+<div class="item">
+<div class="volunteer_gallery">
+<img src="img/kunal-verma.jpg" class="img-fluid"/>
+<div class="volunteer_gallery_content">
+<h3>कुणाल वर्मा</h3>
+</div>
+</div></div>
+
+<div class="item">
+<div class="volunteer_gallery">
+<img src="img/sanya-reddy.jpg" class="img-fluid"/>
+<div class="volunteer_gallery_content">
+<h3>सान्या रेड्डी</h3>
+</div>
+</div></div>
+
+</div></div>
+</div></div>
+</section>
 
 
 
@@ -267,44 +363,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
-
-<section class="volunteer-section" id="volunteer">
-<div class="container">
-<div class="row">
-<div class="col-md-12">
-<div class="apbc-title-area text-center wow fadeInUp">
-<div class="apbc-headline">
-<h3>हमारे स्वयंसेवक डॉक्टर</h3>
-</div></div>
-</div></div>
-
-
-<div class="row">
-
-<div class="col-md-6">
-<p>समर्पित स्वयंसेवी डॉक्टरों की हमारी टीम दृष्टि की रीढ़ है। वे हाशिए पर पड़े समुदायों के बच्चों को व्यापक नेत्र देखभाल सेवाएँ प्रदान करने के लिए उदारतापूर्वक अपनी विशेषज्ञता और समय प्रदान करते हैं।</p>
-
-<p>यदि आप एक योग्य नेत्र देखभाल पेशेवर हैं और बदलाव लाने के लिए उत्सुक हैं, तो हम आपको हमारे नेक काम में शामिल होने के लिए आमंत्रित करते हैं। साथ मिलकर, हम अनगिनत बच्चों का भविष्य उज्ज्वल कर सकते हैं।</p>
-<a href="#enquire2" data-toggle="modal" class="enquire_now2">स्वयंसेवक के लिए यहां क्लिक करें</a> 
-</div>
-
-<div class="col-md-6">
-<img src="img/volunteer-doctors.jpg" class="img-fluid"/>
-</div>
-
-</div></div>
-</section>
-
-
-
-
 <section class="fight-section" id="fight">
 <div class="container">
 <div class="row">
 <div class="col-md-12">
 <div class="apbc-title-area text-center wow fadeInUp">
 <div class="apbc-headline">
-<h3>नेत्र रोगों के खिलाफ लड़ाई</h3>
+<h3>नेत्र रोगों से लड़ें</h3>
 </div></div>
 </div></div>
 
@@ -421,8 +486,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="enroll_modal">
 <div class="quick-enquiry-right">
 <form name="form1" method="post" action="" onsubmit="javascript:return WebForm_OnSubmit();" id="form1">
-<h2>मिलने का एक निश्चित समय तय करें</h2>
-<p>आवेदन शुरू करने के लिए फॉर्म भरें और सबमिट करें</p>
+<h2>हमारे स्वयंसेवी प्रीफेक्ट्स के माध्यम से अपॉइंटमेंट शेड्यूल करें</h2>
+<p>फार्म को भरें और सबमिट करें</p>
 <div class="form-group">
 <input name="txtName" type="text" maxlength="50" id="txtName" class="form-control" placeholder="नाम">
 </div>
@@ -435,6 +500,11 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <input type="text" placeholder="दिनांक" onfocus="(this.type='date')" class="form-control" onblur="(this.type='text')">
 </div>
 
+<div class="form-group text-left">
+<label for="appt-time">Choose an appointment mode:</label><br>
+<span><input type="radio" id="Video" name="fav_language" value="Video"> वीडियो कॉल</span>
+<span class="ml-3"><input type="radio" id="person" name="fav_language" value="person"> आमने-सामने</span>
+</div>
 
 <div class="form-group text-left">
 <label for="appt-time">अपॉइंटमेंट का समय चुनें: </label>
