--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div>
 
 <div class="form-group text-left">
-<label for="appt-time">Choose an appointment mode:</label><br>
+<label for="appt-time">अपॉइंटमेंट मोड चुनें:</label><br>
 <span><input type="radio" id="Video" name="fav_language" value="Video"> वीडियो कॉल</span>
 <span class="ml-3"><input type="radio" id="person" name="fav_language" value="person"> आमने-सामने</span>
 </div>
@@ -533,7 +533,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="quick-enquiry-right">
 <form name="form1" method="post" action="" onsubmit="javascript:return WebForm_OnSubmit();" id="form1">
 <h2>स्वयंसेवक के लिए यहां क्लिक करें</h2>
-<p>आवेदन शुरू करने के लिए फॉर्म भरें और सबमिट करें</p>
+<p>फार्म को भरें और सबमिट करें</p>
 <div class="form-group">
 <input name="txtName" type="text" maxlength="50" id="txtName" class="form-control" placeholder="नाम">
 </div>
