--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="english-translator"><a href="https://drishti-1.github.io/drishti-english/">English</a></div>
 <ul>
 <li><a class="nav-link" href="#home">होम</a></li>
-<li><a class="nav-link" href="#highlights">हाइलाइट</a></li>
+<li><a class="nav-link" href="#highlights">मुख्य आकर्षण</a></li>
 <li><a class="nav-link" href="#mission">हमारा विशेष कार्य</a></li>
 <li><a class="nav-link" href="#volunteer">स्वयंसेवी डॉक्टर</a></li>
 <li><a class="nav-link" href="#fight">नेत्र रोगों से लड़ें</a></li>
@@ -67,7 +67,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <nav>
 <ul>
 <li><a class="nav-link" href="#home">होम</a></li>
-<li><a class="nav-link" href="#highlights">हाइलाइट</a></li>
+<li><a class="nav-link" href="#highlights">मुख्य आकर्षण</a></li>
 <li><a class="nav-link" href="#mission">हमारा विशेष कार्य</a></li>
 <li><a class="nav-link" href="#volunteer">स्वयंसेवी डॉक्टर</a></li>
 <li><a class="nav-link" href="#fight">नेत्र रोगों से लड़ें</a></li>
@@ -131,7 +131,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <div class="col-md-6 wow fadeInUp">
 <div class="content">
-<p><strong>दृष्टि</strong> एमिटी इंटरनेशनल स्कूल की छात्रा <strong>संजना चौहान</strong> द्वारा शुरू की गई एक पहल है, जिसका उद्देश्य वंचित बच्चों को स्पष्ट दृष्टि और उज्जवल भविष्य प्रदान करना है।</p>
+<p><strong>दृष्टि</strong> एमिटी इंटरनेशनल स्कूल की छात्रा <br>
+<strong>संजना चौहान</strong> द्वारा शुरू की गई एक पहल है, जिसका उद्देश्य वंचित बच्चों को स्पष्ट दृष्टि और उज्जवल भविष्य प्रदान करना है।</p>
 </div></div>
 
 </div></div>
@@ -145,7 +146,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="col-md-12">
 <div class="apbc-title-area text-center wow fadeInUp">
 <div class="apbc-headline">
-<h3 class="text-white">हाइलाइट</h3>
+<h3 class="text-white">मुख्य आकर्षण</h3>
 </div></div>
 </div></div>
 
@@ -156,28 +157,28 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="highlights-item">
 <img src="img/highlights-icon1.png" alt="">
 <h3>कुल आउटरीच</h3>
-<p>2500+ से अधिक वंचित बच्चे</p>
+<p>8000+ छात्र</p>
 </div></div>
     
 <div class="col-md-3 wow fadeInUp">
 <div class="highlights-item">
 <img src="img/highlights-icon2.png" alt="">
-<h3>1500+</h3>
-<p>बच्चों ने डॉक्टरों से लिया परामर्श</p>
-</div></div>
-
-<div class="col-md-3 wow fadeInUp">
-<div class="highlights-item">
-<img src="img/highlights-icon3.png" alt="">
-<h3>120</h3>
+<h3>50</h3>
 <p>स्वयंसेवी डॉक्टर</p>
 </div></div>
 
 <div class="col-md-3 wow fadeInUp">
 <div class="highlights-item">
+<img src="img/highlights-icon3.png" alt="">
+<h3>80</h3>
+<p>दृष्टि स्वयंसेवक प्रीफेक्ट</p>
+</div></div>
+
+<div class="col-md-3 wow fadeInUp">
+<div class="highlights-item">
 <img src="img/highlights-icon4.png" alt="">
-<h3>जनसांख्यिकीय आउटरीच</h3>
-<p>(8+ शहर) दिल्ली एनसीआर, हरियाणा, उत्तर प्रदेश, फ़रीदाबाद, गाजियाबाद।</p>
+<h3>22 शिविर</h3>
+<p>8+ शहरों में (दिल्ली एनसीआर, हरियाणा, उत्तर प्रदेश, फरीदाबाद, गाजियाबाद..)</p>
 </div></div>
 
 </div></div>
@@ -374,7 +375,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div></div>
 
 <div class="row">
-<div class="col-md-3">
+<div class="col-md-4">
 <div class="programs-offered-img-text position-relative">
 <div class="programs-case-img">
 <img src="img/refractive-errors.png" class="img-fluid" alt="">
@@ -385,7 +386,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div></div>
 </div>
 
-<div class="col-md-3">
+<div class="col-md-4">
 <div class="programs-offered-img-text position-relative">
 <div class="programs-case-img">
 <img src="img/cataracts.png" class="img-fluid" alt="">
@@ -397,7 +398,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div>
 
 
-<div class="col-md-3">
+<div class="col-md-4">
 <div class="programs-offered-img-text position-relative">
 <div class="programs-case-img">
 <img src="img/glaucoma.png" class="img-fluid" alt="">
@@ -407,19 +408,6 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <p>विश्व भर में 76 मिलियन से अधिक लोग इससे प्रभावित हैं, जिनमें से लगभग आधे मामलों का निदान नहीं हो पाता, तथा उपचार न किए जाने पर दृष्टि की अपरिवर्तनीय हानि हो जाती है।</p>
 </div></div>
 </div>
-
-
-<div class="col-md-3">
-<div class="programs-offered-img-text position-relative">
-<div class="programs-case-img">
-<img src="img/conjunctivitis.png" class="img-fluid" alt="">
-</div>
-<div class="programs-case-text appseo-headline">
-<h3>नेत्रश्लेष्मलाशोथ (गुलाबी आँख)</h3>
-<p>बच्चों में आम, जिसमें आंखों में लालिमा, खुजली और स्राव होता है, जो अक्सर जीवाणु या वायरल संक्रमण के कारण होता है।</p>
-</div></div>
-</div>
-
 
 </div></div>
 </section>
@@ -431,25 +419,16 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="container">
 <div class="row">
 
-<div class="col-12 col-md-4">
+<div class="col-12 col-md-6">
 <div class="footer-block">
 <div class="footer-icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
 <p><a href="tel:+919353528966">+91 9353528966</a></p>
 </div>
 </div>
-<div class="col-12 col-md-4">
+<div class="col-12 col-md-6">
 <div class="footer-block">
 <div class="footer-icon"><i class="fas fa-envelope"></i></div>
 <p><a href="mailto:contact@drishti.com">contact@drishti.com</a></p>
-</div>
-</div>
-<div class="col-12 col-md-4">
-<div class="footer-social">
-<a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-<a href="#" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-<a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-<a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-<a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
 </div>
 </div>
 </div>
@@ -473,15 +452,55 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="js/owl.carousel.js"></script>
 <script src="js/custom.js"></script>
 
+<script type="text/javascript" async >
+$(window).scroll(function(){
+	if($(document).scrollTop()>=$(document).height()/1.8)
+		$("#spopup").show("slow");else $("#spopup").hide("slow");
+});
+function closeSPopup(){
+	$('#spopup').hide('slow');
+}
+</script>
 
-<div class="registration_form"><a href="#enquire" data-toggle="modal" class="enquire_now2"><img src="img/appointment.jpg" class="img-fluid"/></a></div>
 
-<div id="enquire" class="modal enroll_modal" data-easein="shrinkIn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="enquire2" class="modal enroll_modal" data-easein="shrinkIn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content">
 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 <img src="img/close.png" alt="">
 </button>
+
+<div class="enroll_modal">
+<div class="quick-enquiry-right">
+<form name="form1" method="post" action="" onsubmit="javascript:return WebForm_OnSubmit();" id="form1">
+<h2>स्वयंसेवक के लिए यहां क्लिक करें</h2>
+<p>फार्म को भरें और सबमिट करें</p>
+<div class="form-group">
+<input name="txtName" type="text" maxlength="50" id="txtName" class="form-control" placeholder="नाम">
+</div>
+
+<div class="form-group">
+<input name="txtPhone" type="text" maxlength="10" id="txtPhone" tabindex="2" class="form-control" placeholder="फोन नंबर.">
+</div>
+
+<div class="form-group">
+<input name="txtEmail" type="text" maxlength="10" id="txtPhone" tabindex="3" class="form-control" placeholder="ईमेल आईडी">
+</div>
+
+<div class="form-group">
+<input type="hidden" name="HiddenField1" id="HiddenField1">
+<input type="submit" name="btnSubmit" value="सबमिट" id="btnSubmit" class="btn">
+</div></div>
+</form>
+</div>
+</div></div>
+</div></div>
+
+
+
+<div id="spopup" style="display: none;">
+<a style="position:absolute;top:14px;right:10px;color:#555;font-size:10px;font-weight:bold;" href="javascript:void(0);" onClick="return closeSPopup();">
+<img src="img/ico-x.png" width="18" height="18"/></a>
 
 <div class="enroll_modal">
 <div class="quick-enquiry-right">
@@ -512,49 +531,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div>
 
 
-<div class="form-group">
+<div class="form-group mb-0">
 <input type="hidden" name="HiddenField1" id="HiddenField1">
-<input type="submit" name="btnSubmit" value="सबमिट" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;btnSubmit&quot;, &quot;&quot;, true, &quot;VGClaim&quot;, &quot;&quot;, false, false))" id="btnSubmit" class="btn">
+<input type="submit" name="btnSubmit" value="सबमिट" id="btnSubmit" class="btn">
 </div></div>
 </form>
-</div>
 </div></div>
 </div>
 
-
-<div id="enquire2" class="modal enroll_modal" data-easein="shrinkIn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-<div class="modal-dialog">
-<div class="modal-content">
-<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-<img src="img/close.png" alt="">
-</button>
-
-<div class="enroll_modal">
-<div class="quick-enquiry-right">
-<form name="form1" method="post" action="" onsubmit="javascript:return WebForm_OnSubmit();" id="form1">
-<h2>स्वयंसेवक के लिए यहां क्लिक करें</h2>
-<p>फार्म को भरें और सबमिट करें</p>
-<div class="form-group">
-<input name="txtName" type="text" maxlength="50" id="txtName" class="form-control" placeholder="नाम">
-</div>
-
-<div class="form-group">
-<input name="txtPhone" type="text" maxlength="10" id="txtPhone" tabindex="2" class="form-control" placeholder="फोन नंबर.">
-</div>
-
-<div class="form-group">
-<input name="txtEmail" type="text" maxlength="10" id="txtPhone" tabindex="3" class="form-control" placeholder="ईमेल आईडी">
-</div>
-
-<div class="form-group">
-<input type="hidden" name="HiddenField1" id="HiddenField1">
-<input type="submit" name="btnSubmit" value="सबमिट" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;btnSubmit&quot;, &quot;&quot;, true, &quot;VGClaim&quot;, &quot;&quot;, false, false))" id="btnSubmit" class="btn">
-</div></div>
-</form>
-</div>
-</div></div>
-</div>
-
-</div>
 </body>
 </html>		
